# cnn-rs

./: .gitignore  Cargo.toml  README.md  plot.py
src/: approx.rs  args.rs  cnn.rs  convolution.rs  input.rs  lib.rs  main.rs  mnist.rs  patch.rs  pooling.rs  softmax.rs  state.rs  timer.rs
