[package]
name = "cnn-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
opt-level = 3

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.2.7", features = ["derive"] }
image = "0.24.7"
ndarray = {version = "0.15.6", features = ["serde"]}
ndarray-rand = "0.14.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4.0"
